--- a/.htaccess
+++ b/.htaccess
@@ -5,9 +5,9 @@ RewriteEngine On
 # RewriteBase /
 
 RewriteRule ^/install$ /install/index.php
-RewriteRule ^/install/(.*)$ /install/$1.php [L]
+RewriteRule ^/install/(.+)$ /install/$1.php [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^/(.*)$ /index.php?page=$1 [L]
+RewriteRule ^/(.+)$ /index.php?page=$1 [L]
