--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,15 @@
 RewriteEngine On
 
-# DÃ©commentez cette ligne si vous avez des problÃ¨mes
+# Décommentez cette ligne si vous avez des problèmes.
 # RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.+)$ index.php?page=$1 [QSA]
+RewriteRule ^(.+)/(.+)$ index.php?page=$1&arg1=$2 [QSA]
+RewriteRule ^(.+)/(.+)/(.+)$ index.php?page=$1&arg1=$2&arg2=$3 [QSA]
+RewriteRule ^(.+)/(.+)/(.+)/(.+)$ index.php?page=$1&arg1=$2&arg2=$3&arg3=$4 [QSA]
+RewriteRule ^(.+)/(.+)/(.+)/(.+)/(.+)$ index.php?page=$1&arg1=$2&arg2=$3&arg3=$4&arg4=$5 [QSA]
+RewriteRule ^(.+)/(.+)/(.+)/(.+)/(.+)/(.+)$ index.php?page=$1&arg1=$2&arg2=$3&arg3=$4&arg4=$5&arg5=$6 [QSA]
+RewriteRule ^(.+)/(.+)/(.+)/(.+)/(.+)/(.+)/(.+)$ index.php?page=$1&arg1=$2&arg2=$3&arg3=$4&arg4=$5&arg5=$6&arg6=$7 [QSA]
+RewriteRule ^(.+)/(.+)/(.+)/(.+)/(.+)/(.+)/(.+)/(.+)$ index.php?page=$1&arg1=$2&arg2=$3&arg3=$4&arg4=$5&arg5=$6&arg6=$7&arg7=$8 [QSA]
+RewriteRule ^(.+)/(.+)/(.+)/(.+)/(.+)/(.+)/(.+)/(.+)/(.+)$ index.php?page=$1&arg1=$2&arg2=$3&arg3=$4&arg4=$5&arg5=$6&arg6=$7&arg7=$8&arg8=$9 [QSA,L]
