--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,12 @@ RewriteEngine On
 # Décommentez cette ligne si vous avez des problèmes.
 # RewriteBase /
 
+# Install
+RewriteRule ^imnicore/install/([^\/]+)$ index.php?page=imnicore/install&step=$1
+RewriteRule ^imnicore/install/([^\/]+)/([^\/]+)$ index.php?page=imnicore/install&step=$1&do=$2
+
+# getCss & getJs
+RewriteRule ^(getCss|getJs)/(.+).(css|js)$ index.php?page=$1&file=$2
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.+)$ index.php?page=$1 [QSA]
