[f][*] Maintenant c'est un peu plus facile de commit. T'as vu.

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 
-# Décommentez cette ligne si vous avez des problèmes.
+# DÃ©commentez cette ligne si vous avez des problÃ¨mes.
 # RewriteBase /
 
 # Install
